tests/lex-fail/string_bad_esc_seq.fl.0.exp
Error: string_bad_esc_seq.fl(1,3): Unknown escape sequence code point: g
"\g"
  ^  
